# crop_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml  up.sh
db/: conversations.sql
mcp_servers/: Dockerfile
mcp_servers/chroma_server/: Dockerfile  retriever.py  server.py
mcp_servers/db_server/: server.py
mcp_servers/vector_server/: embedder.py  loader.py  schema.sql  seed.py  server.py
prompts/: planner_system.md  verifier_system.md
src/agent_service/: budget.py  config.py  main.py  mcp_server_lib.py  prompts.py  schemas.py  session.py
src/agent_service/agent/: __init__.py  runner.py  verifier.py
src/agent_service/llm/: __init__.py  anthropic_client.py  base.py  lm_studio_client.py
src/agent_service/tools/: base.py  builtin.py  mcp_client.py
src/agent_service/transports/: sse.py  websocket.py
tests/: test_budget.py  test_lm_studio.py  test_mcp.py  test_session.py  test_tools.py  test_verifier.py
