[project]
name = "agent-service"
version = "0.2.0"
description = "Production agentic backend: 4-phase planner, MCP-pluggable tools, framework-agnostic adapters (Anthropic / LangChain / Google ADK)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.39",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "websockets>=13",
    "structlog>=24.4",
    "tiktoken>=0.8",
    "asyncpg>=0.30",
]

[project.optional-dependencies]
mcp-servers = [
    "sentence-transformers>=3.0",
    "pgvector>=0.3",
]
langchain = ["langchain-core>=0.3"]
google-adk = ["google-adk>=0.3"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[project.scripts]
agent-service = "agent_service.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_service", "mcp_servers"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"
testpaths = ["tests"]
